agregando funcionalidad de Modificar el tamaño de la fuente y adaptando valores de px a rem

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -79,13 +79,13 @@ $color-formulario: (
 );
 
 $fuente: (
-  "size-titulo": 32px,
-  "size-subtitulo": 22px,
-  "size-alto": 18px,
-  "size-primario": 16px,
-  "size-secundario": 14px,
-  "size-notas": 12px,
-  "size-boton": 10px,
+  "size-titulo": 2rem,
+  "size-subtitulo": 1.375rem,
+  "size-alto": 1.125rem,
+  "size-primario": 1rem,
+  "size-secundario": .875rem,
+  "size-notas": .75rem,
+  "size-boton": .625rem,
 );
 
 $gap: 30px;
