--- a/src/scss/cover.scss
+++ b/src/scss/cover.scss
@@ -26,17 +26,17 @@
   }
   .cover-title {
     margin: 10px auto;
-    font-size: 36px;
+    font-size: 2.25rem;
     line-height: 38px;
     @media (max-width: map-get($media-queries-limit, "mobile") - 1px) {
       &.cover-title-large {
-        font-size: 30px;
+        font-size: 1.875rem;
         line-height: 34px;
       }
     }
     @media (min-width: map-get($media-queries-limit, "mobile")) {
       max-width: 700px;
-      font-size: 52px;
+      font-size: 3.25rem;
       line-height: 60px;
     }
   }
@@ -45,17 +45,17 @@
     text-align: center;
     max-width: 450px;
     margin: 10px auto;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     @media (min-width: map-get($media-queries-limit, "mobile")) {
-      font-size: 21px;
+      font-size: 1.3125rem;
       max-width: 500px;
     }
     a {
       color: #fff;
-      font-size: 16px;
+      font-size: 1rem;
       @media (min-width: map-get($media-queries-limit, "mobile")) {
-        font-size: 21px;
+        font-size: 1.3125rem;
       }
       &:hover {
         background: none;
