--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -9,7 +9,7 @@ body {
 body {
   background: map-get($color, "fondo");
   color: map-get($color, "texto");
-  font-family: 'Montserrat', Helvetica, Arial, Helvetica, sans-serif;
+  font-family: var(--tipografia-familia, 'sans-serif');
   font-size: map-get($fuente, "size-primario");
   font-weight: 400;
   line-height: 1.333;
@@ -97,7 +97,7 @@ i,
 em,
 cite,
 q {
-  font-family: 'Montserrat', Helvetica, Arial, Helvetica, sans-serif;
+  font-family: var(--tipografia-familia, 'sans-serif');
   font-style: italic;
 }
 
@@ -201,7 +201,7 @@ svg:not(:root) {
 
 // elementos clickeables
 %interact-base {
-  font-family: 'Montserrat', Helvetica, Arial, Helvetica, sans-serif;
+  font-family: var(--tipografia-familia, 'sans-serif');
   border: none;
   border-radius: 3px;
   box-sizing: border-box;
@@ -333,7 +333,7 @@ select {
   box-sizing: border-box;
   color: map-get($color, "texto");
   display: inline-flex;
-  font-family: 'Montserrat', Helvetica, Arial, Helvetica, sans-serif;
+  font-family: var(--tipografia-familia, 'sans-serif');
   font-size: map-get($fuente, "size-primario");
   font-weight: 600;
   padding: map-get($fuente, "size-alto")*.25 map-get($fuente, "size-alto")*.5;
@@ -354,7 +354,7 @@ select {
 }
 
 label {
-  font-family: 'Montserrat', Helvetica, Arial, Helvetica, sans-serif;
+  font-family: var(--tipografia-familia, 'sans-serif');
   font-size: map-get($fuente, "size-primario");
   font-weight: 400;
 }
