agregando funcionalidad de cambiar Tipografía accesible Atkinson

--- a/src/scss/a11y.scss
+++ b/src/scss/a11y.scss
@@ -1,5 +1,5 @@
 .a11y-tipografia { //poner en el body pa cambiar toda la tipografia de la página
-  // --tipografia-familia: 'Atkinson Hyperlegible', sans-serif;
+  --tipografia-familia: 'Atkinson Hyperlegible', sans-serif;
 }
 
 .a11y-solo-lectura {
