--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-gob: (
   "tinto": #9D2446,
 );
 
-$color-conacyt: (
+$color-conahcyt: (
   "azul": #002663,
   "gris-obscuro": #141414,
   "gris-claro": #8C8D8E,
@@ -30,7 +30,7 @@ $color-nav: (
   "sub-fondo": #002663,
   "texto": #002663,
   "texto-gob": #fff,
-  "texto-conacyt": #002663,
+  "texto-conahcyt": #002663,
   "texto-hover": #003384,
   "texto-hover-cel": #fff,
   "borde": #0007
